fixed button alignment in input grid, started working on changing type color

--- a/styles.css
+++ b/styles.css
@@ -181,9 +181,10 @@ body, html {
 #pad{
   grid-area: pad;
   background: radial-gradient(black 46%, grey);
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
   border-radius: 50%;
   width: 75px;
+  margin: 0 auto;
 }
 
 .spine{
